// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination links should respond to click event 1`] = `
<ul
  className="pagination"
>
  <li
    className="disabled"
    id="pagination__prev"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </a>
  </li>
  <li
    className="active"
    key="1"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="waves-effect"
    key="2"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="waves-effect"
    key="5"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </a>
  </li>
</ul>
`;

exports[`Pagination next link should be diabled if current page is the last 1`] = `
<ul
  className="pagination"
>
  <li
    className="disabled"
    id="pagination__prev"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </a>
  </li>
  <li
    className="active"
    key="1"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="waves-effect"
    key="2"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="waves-effect"
    key="5"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </a>
  </li>
</ul>
`;

exports[`Pagination next link should be diabled if current page is the last 2`] = `
<ul
  className="pagination"
>
  <li
    className="waves-effect"
    id="pagination__prev"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </a>
  </li>
  <li
    className="waves-effect"
    key="1"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="waves-effect"
    key="2"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="active"
    key="5"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="disabled"
    id="pagination__next"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </a>
  </li>
</ul>
`;

exports[`Pagination previous link should not be disabled if currentpage is not page 1 1`] = `
<ul
  className="pagination"
>
  <li
    className="disabled"
    id="pagination__prev"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </a>
  </li>
  <li
    className="active"
    key="1"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="waves-effect"
    key="2"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="waves-effect"
    key="5"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </a>
  </li>
</ul>
`;

exports[`Pagination previous link should not be disabled if currentpage is not page 1 2`] = `
<ul
  className="pagination"
>
  <li
    className="waves-effect"
    id="pagination__prev"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </a>
  </li>
  <li
    className="waves-effect"
    key="1"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="active"
    key="2"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="waves-effect"
    key="3"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="waves-effect"
    key="4"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="waves-effect"
    key="5"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </a>
  </li>
</ul>
`;

exports[`Pagination should render with right amount of elements 1`] = `
<ul
  className="pagination"
>
  <li
    className="disabled"
    id="pagination__prev"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_left
      </i>
    </a>
  </li>
  <li
    className="active"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="waves-effect"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="waves-effect"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="waves-effect"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="waves-effect"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="waves-effect"
    id="pagination__next"
  >
    <a
      href="#!"
      onClick={[Function]}
    >
      <i
        className="material-icons"
      >
        chevron_right
      </i>
    </a>
  </li>
</ul>
`;
